# TruePrompter

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  audio.raw  audio2.raw  default.nix  distance_helpers.h  flake.nix  json.h  main.cpp  model.cpp  model.h  model.onnx  new_recognizer.h  prepare.py  prepare_model.sh  recognizer.cpp  recognizer.h  shell.nix
.github/workflows/: build.yaml
cmake/: Findonnxruntime.cmake  phonetisaurus.cmake  proto_utils.cmake
cmake/phonetisaurus/: CMakeLists.txt
include/trueprompter/: distance_helpers.hpp  matcher.hpp  model.hpp  recognizer.hpp
model/: config.json  model.fst  model.onnx
models/: README.md
proto/: CMakeLists.txt
proto/trueprompter/: CMakeLists.txt  protocol.proto
small_model/conf/: model.conf
small_model/graph/: phones.txt
src/: CMakeLists.txt  main.cpp  model.cpp
trueprompter/: CMakeLists.txt
trueprompter/client/: CMakeLists.txt  audio_source.cpp  audio_source.hpp  main.cpp
trueprompter/codec/: CMakeLists.txt  audio_codec.cpp  audio_codec.hpp  av_audio_codec.hpp  resampler.hpp
trueprompter/codec/proto/: CMakeLists.txt  audio_codec.proto
trueprompter/common/: CMakeLists.txt  audio_codec.cpp  audio_codec.hpp  old_audio_codec.hpp
trueprompter/common/proto/: CMakeLists.txt  audio_codec.proto  protocol.proto
trueprompter/recognition/: CMakeLists.txt  dummy.cpp  matcher.cpp  matcher.hpp  prompter.hpp  recognizer.cpp  recognizer.hpp  smith_waterman.hpp  tokenizer.hpp
trueprompter/recognition/impl/: online_matcher.hpp  online_recognizer.hpp  viterbi_matcher.hpp
trueprompter/recognition/kaldi/: kaldi.hpp  model.cpp  model.hpp  recognizer.cpp  tokenizer.cpp
trueprompter/recognition/onnx/: onnx.cpp  onnx.hpp  onnx_model.cpp  onnx_model.hpp  onnx_recognizer.cpp  onnx_recognizer.hpp  onnx_tokenizer.cpp  onnx_tokenizer.hpp
trueprompter/server/: CMakeLists.txt  client_context.hpp  main.cpp  matcher.hpp  recognizer.cpp  recognizer.hpp  smith_waterman.hpp
trueprompter/server_test/: CMakeLists.txt  client_context.hpp  main.cpp
trueprompter/test/: CMakeLists.txt  main.cpp
